consertando uma parte do problema

--- a/index.html
+++ b/index.html
@@ -130,11 +130,14 @@
         <div class="col-6 col-md-4 col-xxl-2">
             <div class="h-100 card rounded-0 border-none">
                 <!-- ? de telas md para cima não aparece, apenas para sm para baixo (ou seja, telas de celulares) -->
-                <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-camiseta.png" alt="Camiseta masculina de manga na cor verde, com bolso e detalhe em vermelho.">
+                <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-camiseta.png"
+                    alt="Camiseta masculina de manga na cor verde, com bolso e detalhe em vermelho.">
                 <!-- ? por padrão não aparece, porém aparece em telas md e em telas xl não -->
-                <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Mobile/categorias/categoria-camiseta.png" alt="Camiseta masculina de manga na cor verde, com bolso e detalhe em vermelho.">
+                <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Mobile/categorias/categoria-camiseta.png"
+                    alt="Camiseta masculina de manga na cor verde, com bolso e detalhe em vermelho.">
                 <!-- ? por padrão não aparece, porém aparece em telas xl -->
-                <img class="h-100 d-none d-xl-block" src="./assets/Mobile/categorias/categoria-camiseta.png" alt="Camiseta masculina de manga na cor verde, com bolso e detalhe em vermelho.">
+                <img class="h-100 d-none d-xl-block" src="./assets/Mobile/categorias/categoria-camiseta.png"
+                    alt="Camiseta masculina de manga na cor verde, com bolso e detalhe em vermelho.">
                 <!-- ? card text é adicionado para ajustar o texto dentro do card, ficando "mais bonito visualmente" através de espaçamentos extras, da impressão de estar mais organizado no card e se alinha com o estilo padrão de cards do bootstrap (além é claro, de remover aquele espaçamento ridículo que toda tag "p" possui no bootstrap) -->
                 <!-- ? text-bg-dark deixa a cor dos textos em branco também (acredito que a função dessa classe é fazer com que os textos filhos tenham a cor branca por saberem que o bg é escuro, onde, não faria sentido text-bg-dark deixar escuro também sendo que o fundo da div já é escuro, loucura né?) -->
                 <div class="card-header bg-black text-bg-dark">
@@ -145,11 +148,14 @@
 
         <div class="col-6 col-md-4 col-xxl-2">
             <div class="h-100 card rounded-0 border-none">
-                <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-bolsas.png" alt="Bolsa de couro com detalhe em verde na alça.">
+                <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-bolsas.png"
+                    alt="Bolsa de couro com detalhe em verde na alça.">
 
-                <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-bolsas.png" alt="Bolsa de couro com detalhe em verde na alça.">
+                <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-bolsas.png"
+                    alt="Bolsa de couro com detalhe em verde na alça.">
 
-                <img class="h-100 d-none d-xl-block" src="./assets/Desktop/categorias/categoria-bolsa.png" alt="Bolsa de couro com detalhe em verde na alça.">
+                <img class="h-100 d-none d-xl-block" src="./assets/Desktop/categorias/categoria-bolsa.png"
+                    alt="Bolsa de couro com detalhe em verde na alça.">
                 <div class="card-header bg-black text-bg-dark">
                     <p class="text-center card-text">Bolsas</p>
                 </div>
@@ -158,11 +164,14 @@
 
         <div class="col-6 col-md-4 col-xxl-2">
             <div class="card h-100 rounded-0 border-none">
-                <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-calcados.png" alt="Sapatos desamarrados com um pé em cima de um balcão e outro no chão">
+                <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-calcados.png"
+                    alt="Sapatos desamarrados com um pé em cima de um balcão e outro no chão">
 
-                <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-calcados.png" alt="Sapatos desamarrados com um pé em cima de um balcão e outro no chão">
+                <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-calcados.png"
+                    alt="Sapatos desamarrados com um pé em cima de um balcão e outro no chão">
 
-                <img class="h-100 d-none d-xl-block" src="./assets/Desktop/categorias/categoria-calcados.png" alt="Sapatos desamarrados com um pé em cima de um balcão e outro no chão">
+                <img class="h-100 d-none d-xl-block" src="./assets/Desktop/categorias/categoria-calcados.png"
+                    alt="Sapatos desamarrados com um pé em cima de um balcão e outro no chão">
 
                 <div class="card-header bg-black text-bg-dark">
                     <p class="text-center card-text">Calçados</p>
@@ -172,11 +181,14 @@
 
         <div class="col-6 col-md-4 col-xxl-2">
             <div class="card h-100 rounded-0 border-none">
-                <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-calcas.png" alt="Quatro calças jeans dobradas e empilhadas.">
+                <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-calcas.png"
+                    alt="Quatro calças jeans dobradas e empilhadas.">
 
-                <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-calcas.png" alt="Quatro calças jeans dobradas e empilhadas.">
+                <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-calcas.png"
+                    alt="Quatro calças jeans dobradas e empilhadas.">
 
-                <img class="h-100 d-none d-xl-block" src="./assets/Desktop/categorias/categoria-calcas.png" alt="Quatro calças jeans dobradas e empilhadas.">
+                <img class="h-100 d-none d-xl-block" src="./assets/Desktop/categorias/categoria-calcas.png"
+                    alt="Quatro calças jeans dobradas e empilhadas.">
                 <div class="card-header bg-black text-bg-dark">
                     <p class="text-center card-text">Calças</p>
                 </div>
@@ -185,11 +197,14 @@
 
         <div class="col-6 col-md-4 col-xxl-2">
             <div class="card h-100 rounded-0 border-none">
-                <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-casacos.png" alt="Casaco tactel com ziper e detalhe em preto na gola.">
+                <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-casacos.png"
+                    alt="Casaco tactel com ziper e detalhe em preto na gola.">
 
-                <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-casacos.png" alt="Casaco tactel com ziper e detalhe em preto na gola.">
+                <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-casacos.png"
+                    alt="Casaco tactel com ziper e detalhe em preto na gola.">
 
-                <img class="h-100 d-none d-xl-block" src="./assets/Desktop/categorias/categoria-casacos.png" alt="Casaco tactel com ziper e detalhe em preto na gola.">
+                <img class="h-100 d-none d-xl-block" src="./assets/Desktop/categorias/categoria-casacos.png"
+                    alt="Casaco tactel com ziper e detalhe em preto na gola.">
                 <div class="card-header bg-black text-bg-dark">
                     <p class="text-center card-text">Casacos</p>
                 </div>
@@ -198,11 +213,14 @@
 
         <div class="col-6 col-md-4 col-xxl-2">
             <div class="card h-100 rounded-0 border-none">
-                <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-oculos.png" alt="Casaco tactel com ziper e detalhe em preto na gola.">
+                <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-oculos.png"
+                    alt="Casaco tactel com ziper e detalhe em preto na gola.">
 
-                <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-oculos.png" alt="Casaco tactel com ziper e detalhe em preto na gola.">
+                <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-oculos.png"
+                    alt="Casaco tactel com ziper e detalhe em preto na gola.">
 
-                <img class="h-100 d-none d-xl-block" src="./assets/Desktop/categorias/categoria-oculos.png" alt="Casaco tactel com ziper e detalhe em preto na gola.">
+                <img class="h-100 d-none d-xl-block" src="./assets/Desktop/categorias/categoria-oculos.png"
+                    alt="Casaco tactel com ziper e detalhe em preto na gola.">
                 <div class="card-header bg-black text-bg-dark">
                     <p class="text-center card-text">Óculos</p>
                 </div>
@@ -221,12 +239,15 @@
 
         <div class="col-12 col-md-6 col-xl-4 pb-4">
             <div class="card rounded-0 border-none">
-                <img class="d-md-none" src="./assets/Mobile/produtos/camiseta.png" alt="Modelo masculino com camiseta amarela, gorro preto em frente a parede cinza.">
+                <img class="d-md-none" src="./assets/Mobile/produtos/camiseta.png"
+                    alt="Modelo masculino com camiseta amarela, gorro preto em frente a parede cinza.">
 
-                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/camiseta.png" alt="Modelo masculino com camiseta amarela, gorro preto em frente a parede cinza.">
+                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/camiseta.png"
+                    alt="Modelo masculino com camiseta amarela, gorro preto em frente a parede cinza.">
 
-                <img class="d-none d-xl-block" src="./assets/Desktop/produtos/camiseta.png" alt="Modelo masculino com camiseta amarela, gorro preto em frente a parede cinza.">
-                <div class="card-body">
+                <img class="d-none d-xl-block" src="./assets/Desktop/produtos/camiseta.png"
+                    alt="Modelo masculino com camiseta amarela, gorro preto em frente a parede cinza.">
+                <div class="card-body position-relative">
                     <h5 class="card-title">Camiseta Conforto</h5>
                     <p class="card-text">
                         Multicores e tamanhos. Tecido de algodão 100%, fresquinho para o verão. Modelagem unissex.
@@ -240,19 +261,26 @@
 
         <div class="col-12 col-md-6 col-xl-4 pb-4">
             <div class="card h-100 rounded-0 border-none">
-                <img class="h-100 d-md-none" src="./assets/Mobile/produtos/calca.png" alt="Modelo feminina em fundo deserto com calça de alfaiataria bege.">
+                <img class="h-100 d-md-none" src="./assets/Mobile/produtos/calca.png"
+                    alt="Modelo feminina em fundo deserto com calça de alfaiataria bege.">
 
-                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/calca.png" alt="Modelo feminina em fundo deserto com calça de alfaiataria bege.">
+                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/calca.png"
+                    alt="Modelo feminina em fundo deserto com calça de alfaiataria bege.">
 
-                <img class="d-none d-xl-block" src="./assets/Desktop/produtos/calca.png" alt="Modelo feminina em fundo deserto com calça de alfaiataria bege.">
+                <img class="d-none d-xl-block" src="./assets/Desktop/produtos/calca.png"
+                    alt="Modelo feminina em fundo deserto com calça de alfaiataria bege.">
 
-                <div class="card-body">
+                <div class="card-body position-relative">
                     <h5 class="card-title">Calça Alfaiataria</h5>
                     <p class="card-text">
                         Modelo Wide Leg alfaiataria em linho. Uma peça pra vida toda!
                     </p>
-                    <p class="fw-bold">R$  180,00</p>
-                    <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
+
+                    <div class="valor-ver-mais">
+                        <p class="fw-bold">R$ 180,00</p>
+                        <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
+                    </div>
+
                 </div>
 
             </div>
