--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
         <div class="col-6 col-md-4 col-xxl-2">
             <div class="h-100 card rounded-0 border-none">
                 <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-bolsas.png"
-                    alt="Bolsa de couro com detalhe em verde na alça.">
+                    alt="Bolsa feminina de couro na cor marrom, com cortes quadrados, e alça dourada em formato de corrente com detalhe verde, em fundo verde limão.">
 
                 <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-bolsas.png"
-                    alt="Bolsa de couro com detalhe em verde na alça.">
+                    alt="Bolsa feminina de couro na cor marrom, com cortes quadrados, e alça dourada em formato de corrente com detalhe verde, em fundo verde limão.">
 
                 <img class="h-100 d-none d-xl-block" src="./assets/Desktop/categorias/categoria-bolsa.png"
-                    alt="Bolsa de couro com detalhe em verde na alça.">
+                    alt="Bolsa feminina de couro na cor marrom, com cortes quadrados, e alça dourada em formato de corrente com detalhe verde, em fundo verde limão.">
                 <div class="card-header bg-black text-bg-dark">
                     <p class="text-center card-text">Bolsas</p>
                 </div>
@@ -165,13 +165,13 @@
         <div class="col-6 col-md-4 col-xxl-2">
             <div class="card h-100 rounded-0 border-none">
                 <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-calcados.png"
-                    alt="Sapatos desamarrados com um pé em cima de um balcão e outro no chão">
+                    alt="Par de tênis unissex com cor predominante branca e traços na cores laranja, azul, verde e cadarço vermelho, em fundo verde limão.">
 
                 <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-calcados.png"
-                    alt="Sapatos desamarrados com um pé em cima de um balcão e outro no chão">
+                    alt="Par de tênis unissex com cor predominante branca e traços na cores laranja, azul, verde e cadarço vermelho, em fundo verde limão.">
 
                 <img class="h-100 d-none d-xl-block" src="./assets/Desktop/categorias/categoria-calcados.png"
-                    alt="Sapatos desamarrados com um pé em cima de um balcão e outro no chão">
+                    alt="Par de tênis unissex com cor predominante branca e traços na cores laranja, azul, verde e cadarço vermelho, em fundo verde limão.">
 
                 <div class="card-header bg-black text-bg-dark">
                     <p class="text-center card-text">Calçados</p>
@@ -182,13 +182,13 @@
         <div class="col-6 col-md-4 col-xxl-2">
             <div class="card h-100 rounded-0 border-none">
                 <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-calcas.png"
-                    alt="Quatro calças jeans dobradas e empilhadas.">
+                    alt="Quatro calças jeans dobradas e organizadas uma acima da outra, em fundo verde limão.">
 
                 <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-calcas.png"
-                    alt="Quatro calças jeans dobradas e empilhadas.">
+                    alt="Quatro calças jeans dobradas e organizadas uma acima da outra, em fundo verde limão.">
 
                 <img class="h-100 d-none d-xl-block" src="./assets/Desktop/categorias/categoria-calcas.png"
-                    alt="Quatro calças jeans dobradas e empilhadas.">
+                    alt="Quatro calças jeans dobradas e organizadas uma acima da outra, em fundo verde limão.">
                 <div class="card-header bg-black text-bg-dark">
                     <p class="text-center card-text">Calças</p>
                 </div>
@@ -198,13 +198,13 @@
         <div class="col-6 col-md-4 col-xxl-2">
             <div class="card h-100 rounded-0 border-none">
                 <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-casacos.png"
-                    alt="Casaco tactel com ziper e detalhe em preto na gola.">
+                    alt="Casaco masculino na cor marrom em fundo verde limão.">
 
                 <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-casacos.png"
-                    alt="Casaco tactel com ziper e detalhe em preto na gola.">
+                    alt="Casaco masculino na cor marrom em fundo verde limão.">
 
                 <img class="h-100 d-none d-xl-block" src="./assets/Desktop/categorias/categoria-casacos.png"
-                    alt="Casaco tactel com ziper e detalhe em preto na gola.">
+                    alt="Casaco masculino na cor marrom em fundo verde limão.">
                 <div class="card-header bg-black text-bg-dark">
                     <p class="text-center card-text">Casacos</p>
                 </div>
@@ -214,13 +214,13 @@
         <div class="col-6 col-md-4 col-xxl-2">
             <div class="card h-100 rounded-0 border-none">
                 <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-oculos.png"
-                    alt="Casaco tactel com ziper e detalhe em preto na gola.">
+                    alt="Óculos de Sol com lentes arredondadas e armação dourada, em fundo verde limão.">
 
                 <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-oculos.png"
-                    alt="Casaco tactel com ziper e detalhe em preto na gola.">
+                    alt="Óculos de Sol com lentes arredondadas e armação dourada, em fundo verde limão.">
 
                 <img class="h-100 d-none d-xl-block" src="./assets/Desktop/categorias/categoria-oculos.png"
-                    alt="Casaco tactel com ziper e detalhe em preto na gola.">
+                    alt="Óculos de Sol com lentes arredondadas e armação dourada, em fundo verde limão.">
                 <div class="card-header bg-black text-bg-dark">
                     <p class="text-center card-text">Óculos</p>
                 </div>
@@ -247,12 +247,12 @@
 
                 <img class="d-none d-xl-block" src="./assets/Desktop/produtos/camiseta.png"
                     alt="Modelo masculino com camiseta amarela, gorro preto em frente a parede cinza.">
-                <div class="card-body position-relative">
+                <div class="card-body">
                     <h5 class="card-title">Camiseta Conforto</h5>
                     <p class="card-text">
                         Multicores e tamanhos. Tecido de algodão 100%, fresquinho para o verão. Modelagem unissex.
                     </p>
-                    <p class="fw-bold">R$ 70,00</p>
+                    <p class="fw-bold mt-2">R$ 70,00</p>
                     <!-- mantive a classe btn apenas para dar os espaçamentos de um botão -->
                     <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
                 </div>
@@ -270,16 +270,14 @@
                 <img class="d-none d-xl-block" src="./assets/Desktop/produtos/calca.png"
                     alt="Modelo feminina em fundo deserto com calça de alfaiataria bege.">
 
-                <div class="card-body position-relative">
+                <div class="card-body">
                     <h5 class="card-title">Calça Alfaiataria</h5>
                     <p class="card-text">
                         Modelo Wide Leg alfaiataria em linho. Uma peça pra vida toda!
                     </p>
 
-                    <div class="valor-ver-mais">
-                        <p class="fw-bold">R$ 180,00</p>
-                        <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
-                    </div>
+                    <p class="fw-bold mt-auto">R$ 180,00</p>
+                    <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
 
                 </div>
 
