--- a/index.html
+++ b/index.html
@@ -241,13 +241,13 @@
         <div class="col-12 col-md-6 col-xl-4 pb-4">
             <div class="card rounded-0 border-none">
                 <img class="d-md-none" src="./assets/Mobile/produtos/camiseta.png"
-                    alt="Modelo masculino com camiseta amarela, gorro preto em frente a parede cinza.">
+                    alt="Modelo masculo vestindo touca preta, blusa marrom e calça jeans, com uma parede cinza de fundo.">
 
                 <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/camiseta.png"
-                    alt="Modelo masculino com camiseta amarela, gorro preto em frente a parede cinza.">
+                    alt="Modelo masculo vestindo touca preta, blusa marrom e calça jeans, com uma parede cinza de fundo.">
 
                 <img class="d-none d-xl-block" src="./assets/Desktop/produtos/camiseta.png"
-                    alt="Modelo masculino com camiseta amarela, gorro preto em frente a parede cinza.">
+                    alt="Modelo masculo vestindo touca preta, blusa marrom e calça jeans, com uma parede cinza de fundo.">
                 <div class="card-body">
                     <h5 class="card-title">Camiseta Conforto</h5>
                     <p class="card-text">
@@ -263,13 +263,13 @@
         <div class="col-12 col-md-6 col-xl-4 pb-4">
             <div class="card h-100 rounded-0 border-none">
                 <img class="h-100 d-md-none" src="./assets/Mobile/produtos/calca.png"
-                    alt="Modelo feminina em fundo deserto com calça de alfaiataria bege.">
+                    alt="Modelo feminina vestindo blusa marrom, calça bege, par de sapatos altos na cor branca, cordão e pulseira, em um ambiente aberto com chão de terra e matos secos.">
 
                 <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/calca.png"
-                    alt="Modelo feminina em fundo deserto com calça de alfaiataria bege.">
+                    alt="Modelo feminina vestindo blusa marrom, calça bege, par de sapatos altos na cor branca, cordão e pulseira, em um ambiente aberto com chão de terra e matos secos.">
 
                 <img class="d-none d-xl-block" src="./assets/Desktop/produtos/calca.png"
-                    alt="Modelo feminina em fundo deserto com calça de alfaiataria bege.">
+                    alt="Modelo feminina vestindo blusa marrom, calça bege, par de sapatos altos na cor branca, cordão e pulseira, em um ambiente aberto com chão de terra e matos secos.">
 
                 <div class="card-body">
                     <h5 class="card-title">Calça Alfaiataria</h5>
@@ -287,9 +287,14 @@
 
         <div class="col-12 col-md-6 col-xl-4 pb-4">
             <div class="card h-100 rounded-0 border-none">
-                <img class="d-md-none" src="./assets/Mobile/produtos/tenis.png" alt="Par de Tênis Chunky brancos.">
-                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/tenis.png" alt="Par de Tênis Chunky brancos.">
-                <img class="d-none d-xl-block" src="./assets/Desktop/produtos/tenis.png" alt="Par de Tênis Chunky brancos.">
+                <img class="d-md-none" src="./assets/Mobile/produtos/tenis.png"
+                    alt="Foco nos pés de modelo usando par de tênis e meia na cor branca, e calça na cor preta, pisando em uma poça de água.">
+
+                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/tenis.png"
+                    alt="Foco nos pés de modelo usando par de tênis e meia na cor branca, e calça na cor preta, pisando em uma poça de água.">
+
+                <img class="d-none d-xl-block" src="./assets/Desktop/produtos/tenis.png"
+                    alt="Foco nos pés de modelo usando par de tênis e meia na cor branca, e calça na cor preta, pisando em uma poça de água.">
                 <div class="card-body">
                     <h5 class="card-title">Tênis Chunky</h5>
                     <p class="card-text">
@@ -304,10 +309,14 @@
 
         <div class="col-12 col-md-6 col-xl-4 pb-4">
             <div class="card h-100 rounded-0 border-none">
-                <img class="d-md-none" src="./assets/Mobile/produtos/jaqueta-jeans.png" alt="Jaqueta Jeans masculina.">
+                <img class="d-md-none" src="./assets/Mobile/produtos/jaqueta-jeans.png"
+                    alt="Modelo masculino vestindo toca e calça na cor preta, jaqueta jeans azul, blusa branca e cordão dourado, em um fundo branco.">
 
-                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/jaqueta-jeans.png" alt="Jaqueta Jeans masculina.">
-                <img class="d-none d-xl-block" src="./assets/Desktop/produtos/jaqueta-jeans.png" alt="Jaqueta Jeans masculina.">
+                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/jaqueta-jeans.png"
+                    alt="Modelo masculino vestindo toca e calça na cor preta, jaqueta jeans azul, blusa branca e cordão dourado, em um fundo branco.">
+
+                <img class="d-none d-xl-block" src="./assets/Desktop/produtos/jaqueta-jeans.png"
+                    alt="Modelo masculino vestindo toca e calça na cor preta, jaqueta jeans azul, blusa branca e cordão dourado, em um fundo branco.">
 
                 <div class="card-body">
                     <h5 class="card-title">Jaqueta Jeans</h5>
@@ -323,10 +332,14 @@
 
         <div class="col-12 col-md-6 col-xl-4 pb-4">
             <div class="card h-100 rounded-0 border-none">
-                <img class="d-md-none" src="./assets/Mobile/produtos/oculos.png" alt="Òculos de grau masculino.">
+                <img class="d-md-none" src="./assets/Mobile/produtos/oculos.png"
+                    alt="Modelo masculino com blusa branca e um par de óculos de lentes transparentes arredondadas, utilizando um notebook, com um cachorro poodle branco no seu colo, e em um fundo branco.">
 
-                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/oculos.png" alt="Òculos de grau masculino.">
-                <img class="d-none d-xl-block" src="./assets/Desktop/produtos/oculos.png" alt="Òculos de grau masculino.">
+                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/oculos.png"
+                    alt="Modelo masculino com blusa branca e um par de óculos de lentes transparentes arredondadas, utilizando um notebook, com um cachorro poodle branco no seu colo, e em um fundo branco.">
+
+                <img class="d-none d-xl-block" src="./assets/Desktop/produtos/oculos.png"
+                    alt="Modelo masculino com blusa branca e um par de óculos de lentes transparentes arredondadas, utilizando um notebook, com um cachorro poodle branco no seu colo, e em um fundo branco.">
 
                 <div class="card-body">
                     <h5 class="card-title">Óculos Redondo</h5>
@@ -342,10 +355,13 @@
 
         <div class="col-12 col-md-6 col-xl-4 pb-4">
             <div class="card h-100 rounded-0 border-none">
-                <img class="d-md-none" src="./assets/Mobile/produtos/bolsa.png" alt="Òculos de grau masculino.">
+                <img class="d-md-none" src="./assets/Mobile/produtos/bolsa.png"
+                    alt="Cintura, pernas e pés de modelo feminina vestindo sobretudo de cor predominante bege com detalhes em tom vermelho e escuro, com calça e par de sapatos na cor preta, segurando bolsa na cor bege, com fundo de prédio.">
 
-                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/bolsa.png" alt="Òculos de grau masculino.">
-                <img class="d-none d-xl-block" src="./assets/Desktop/produtos/bolsa.png" alt="Òculos de grau masculino.">
+                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/bolsa.png"
+                    alt="Cintura, pernas e pés de modelo feminina vestindo sobretudo de cor predominante bege com detalhes em tom vermelho e escuro, com calça e par de sapatos na cor preta, segurando bolsa na cor bege, com fundo de prédio.">
+                <img class="d-none d-xl-block" src="./assets/Desktop/produtos/bolsa.png"
+                    alt="Cintura, pernas e pés de modelo feminina vestindo sobretudo de cor predominante bege com detalhes em tom vermelho e escuro, com calça e par de sapatos na cor preta, segurando bolsa na cor bege, com fundo de prédio.">
 
                 <div class="card-body">
                     <h5 class="card-title">Bolsa coringa</h5>
