--- a/index.html
+++ b/index.html
@@ -248,14 +248,16 @@
 
                 <img class="d-none d-xl-block" src="./assets/Desktop/produtos/camiseta.png"
                     alt="Modelo masculo vestindo touca preta, blusa marrom e calça jeans, com uma parede cinza de fundo.">
-                <div class="card-body">
+                <div class="card-body d-flex flex-column">
                     <h5 class="card-title">Camiseta Conforto</h5>
                     <p class="card-text">
                         Multicores e tamanhos. Tecido de algodão 100%, fresquinho para o verão. Modelagem unissex.
                     </p>
-                    <p class="fw-bold mt-2">R$ 70,00</p>
-                    <!-- mantive a classe btn apenas para dar os espaçamentos de um botão -->
-                    <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
+                    <div class="mt-auto">
+                        <p class="fw-bold mt-2">R$ 70,00</p>
+                        <!-- mantive a classe btn apenas para dar os espaçamentos de um botão -->
+                        <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -271,15 +273,18 @@
                 <img class="d-none d-xl-block" src="./assets/Desktop/produtos/calca.png"
                     alt="Modelo feminina vestindo blusa marrom, calça bege, par de sapatos altos na cor branca, cordão e pulseira, em um ambiente aberto com chão de terra e matos secos.">
 
-                <div class="card-body">
+                <!-- ! transformando o card body em flexivel e mudando sua direção para de coluna, pois quero manter os elementos um embaixo do outro, porém quero "empurrar" para baixo o máximo possível a div com os valores  e o botão ver mais, para isso posso utilizar o mt-auto, porém, ele só funciona com o flex, quando uso o auto, ele empurra o elemento o máximo que der, no caso, usei mt-auto, então ele vai pegar o máximo possível de margin top -->
+                <!-- ? seguindo os conceitos acima o os valores e o botão ver mais sempre estarão alinhados aos cards do lado (em telas de tablet, dsktop etc) independente do tamanho da descrição do produto! sendo grande ou não -->
+                <div class="card-body d-flex flex-column">
                     <h5 class="card-title">Calça Alfaiataria</h5>
                     <p class="card-text">
                         Modelo Wide Leg alfaiataria em linho. Uma peça pra vida toda!
                     </p>
 
-                    <p class="fw-bold mt-auto">R$ 180,00</p>
-                    <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
-
+                    <div class="mt-auto">
+                        <p class="fw-bold">R$ 180,00</p>
+                        <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
+                    </div>
                 </div>
 
             </div>
@@ -295,13 +300,17 @@
 
                 <img class="d-none d-xl-block" src="./assets/Desktop/produtos/tenis.png"
                     alt="Foco nos pés de modelo usando par de tênis e meia na cor branca, e calça na cor preta, pisando em uma poça de água.">
-                <div class="card-body">
+                <div class="card-body d-flex flex-column">
                     <h5 class="card-title">Tênis Chunky</h5>
                     <p class="card-text">
                         Snicker casual com solado mais alto e modelagem robusta. Modelo unissex.
                     </p>
-                    <p class="fw-bold">R$ 250,00</p>
-                    <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
+
+                    <div class="mt-auto">
+                        <p class="fw-bold">R$ 250,00</p>
+                        <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
+                    </div>
+
                 </div>
 
             </div>
@@ -318,13 +327,16 @@
                 <img class="d-none d-xl-block" src="./assets/Desktop/produtos/jaqueta-jeans.png"
                     alt="Modelo masculino vestindo toca e calça na cor preta, jaqueta jeans azul, blusa branca e cordão dourado, em um fundo branco.">
 
-                <div class="card-body">
+                <div class="card-body d-flex flex-column">
                     <h5 class="card-title">Jaqueta Jeans</h5>
                     <p class="card-text">
                         Modelo unissex oversized com gola de camurça. Atemporal e autêntica!
                     </p>
-                    <p class="fw-bold">R$ 30,00</p>
-                    <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
+                    <div class="mt-auto">
+                        <p class="fw-bold">R$ 30,00</p>
+                        <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
+                    </div>
+
                 </div>
 
             </div>
@@ -341,15 +353,16 @@
                 <img class="d-none d-xl-block" src="./assets/Desktop/produtos/oculos.png"
                     alt="Modelo masculino com blusa branca e um par de óculos de lentes transparentes arredondadas, utilizando um notebook, com um cachorro poodle branco no seu colo, e em um fundo branco.">
 
-                <div class="card-body">
+                <div class="card-body d-flex flex-column">
                     <h5 class="card-title">Óculos Redondo</h5>
                     <p class="card-text">
                         Armação metálica em grafite com lentes arredondadas. Sem erro!
                     </p>
-                    <p class="fw-bold">R$ 120,00</p>
-                    <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
+                    <div class="mt-auto">
+                        <p class="fw-bold">R$ 120,00</p>
+                        <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
+                    </div>
                 </div>
-
             </div>
         </div>
 
@@ -363,13 +376,15 @@
                 <img class="d-none d-xl-block" src="./assets/Desktop/produtos/bolsa.png"
                     alt="Cintura, pernas e pés de modelo feminina vestindo sobretudo de cor predominante bege com detalhes em tom vermelho e escuro, com calça e par de sapatos na cor preta, segurando bolsa na cor bege, com fundo de prédio.">
 
-                <div class="card-body">
+                <div class="card-body d-flex flex-column">
                     <h5 class="card-title">Bolsa coringa</h5>
                     <p class="card-text">
                         Bolsa camel em couro sintético de alta duração. Ideal para acompanhar você por uma vida!
                     </p>
-                    <p class="fw-bold">R$ 120,00</p>
-                    <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
+                    <div class="mt-auto">
+                        <p class="fw-bold">R$ 120,00</p>
+                        <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
+                    </div>
                 </div>
 
             </div>
